# tauri-template-vue

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/migrations/: 20240524164751_init.down.sql  20240524164751_init.up.sql  20240719090718_add_a2f.down.sql  20240719090718_add_a2f.up.sql  20240720094715_add_a2f.down.sql  20240720094715_add_a2f.up.sql
api/src/: main.rs
api/src/auth/: auth.rs  iam.rs  middleware_biscuit.rs  mod.rs  registration.rs
api/src/mail_templates/: a2f.mjml  reset_password.mjml  verify_user_email.mjml
api/src/users_settings/: main.rs
api/src/utils/: mailer.rs  mod.rs  openapi.rs  problems.rs
frontend/: eslint.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: .env  Main.vue  http.ts  iam.ts  main.ts  types.ts
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: lib.rs  menu.rs
frontend/src/assets/css/: base.css  tailwind.css
frontend/src/components/: ColorModeToggle.vue  CustomRouterLink.vue  ThemeSwitch.vue
frontend/src/components/custom/: profile-picture-upload.vue
frontend/src/components/panel/: CollapseMenu.vue  ContentLayout.vue  FlagComponent.vue  Menu.vue  Navbar.vue  SheeMenu.vue  SheetMenu.vue  Sidebar.vue  SidebarToggle.vue  UserDropdown.vue
frontend/src/i18n/locales/: en.json  fr.json
frontend/src/lib/: config.ts  menu.ts
frontend/src/old/: App.vue
frontend/src/router/: router.ts  routes.ts
frontend/src/stores/: settings.ts
frontend/src/utils/: components.ts  problemFactory.ts  useAdminPanel.ts  useMenu.ts
(+24 files in other folders)
