[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
biscuit-auth = { version = "4.1.1", features = ["uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
clap = { version = "4.5.4", features = ["derive", "env", "cargo", "wrap_help"] }
log = "0.4.21"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "ipnetwork", "migrate"] }
http = "0.2.12"
actix-cors = "0.7.0"
anyhow = "1.0.82"
serde = "1.0.202"
paperclip = { version = "0.8.2", default-features = false, features = ["actix4", "v3", "chrono", "uuid"] }
validator = { version = "0.16.1", features = ["derive", "unic"] }
strum = { version = "0.26.2", features = ["derive"] }
http-api-problem = { version = "0.57.0", features = ["actix-web"] }
serde_json = "1.0.117"
argon2 = "0.5.3"
futures-util = "0.3.30"
actix = "0.13.3"
reqwest = { version = "0.12.3", default-features = false, features = ["charset", "http2", "macos-system-configuration"] }
mrml = "3.1.5"
lettre = { version = "0.11.7", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls-tls"] }
html2text = "0.12.5"
url = "2.5.0"
env_logger = "0.11.3"
actix-files = "0.6.5"
actix-multipart = "0.7.2"
mime = "0.3.17"
image = "0.25.1"
